# supermarket-analytics-platform

./: README.md  docker-compose.yml  run_spark.ps1  test_transactions.json
backend/: Dockerfile  pyproject.toml
backend/app/: db.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: analytics.py  ingest.py  models.py  recommendations.py  segmentation.py  summary.py  transactions.py
backend/app/core/: config.py  logging.py
backend/app/domain/: entities.py
backend/app/repositories/: catalog_repo.py  recommendations_repo.py  segmentation_repo.py  transaction_repo.py
backend/app/schemas/: analytics.py  recommendations.py  segmentation.py  summary.py
backend/app/services/: analytics_service.py  ingestion_service.py  recommender_service.py  segmentation_service.py  summary_service.py
backend/tests/: test_health.py
data/models/association_rules.parquet/: .part-00000-16b58137-318a-4df2-9172-99b925165c88-c000.snappy.parquet.crc  .part-00000-2d2bcce7-2832-4efb-99bf-25178215f62c-c000.snappy.parquet.crc  .part-00001-16b58137-318a-4df2-9172-99b925165c88-c000.snappy.parquet.crc  .part-00001-2d2bcce7-2832-4efb-99bf-25178215f62c-c000.snappy.parquet.crc  .part-00002-16b58137-318a-4df2-9172-99b925165c88-c000.snappy.parquet.crc  .part-00002-2d2bcce7-2832-4efb-99bf-25178215f62c-c000.snappy.parquet.crc  (+10 more)
docs/: arquitectura.md  informe-tecnico.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
spark_jobs/: ingest_initial_dataset.py  train_recommender.py  train_segmentation.py
spark_jobs/shared/: schemas.py
(+103 files in other folders)
