[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "supermercado-analytics-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "duckdb>=0.10.0",
    "pandas>=2.2.0",
    "pyarrow>=16.0.0",
    "pyspark>=3.5.0",
    "scikit-learn>=1.4.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
